--- a/SHRP2R19A.tex
+++ b/SHRP2R19A.tex
@@ -5,6 +5,7 @@
   style=gb7714-2015ay, 
   % gbalign=gb7714-2015, 
   natbib=true,isbn,
+  gbcitelocal=chinese,
   gbannote=true,
   gbpub=false]{biblatex}
 \def\UrlFont{\ttfamily}  %% 恢复 url 的字体样式
