--- a/contents/chp02.tex
+++ b/contents/chp02.tex
@@ -407,7 +407,6 @@ Spliced girders are precast concrete girders fabricated in several segments that
   \label{fig:spliced-i-girder}
 \end{figure}
 
-
 Spliced girders are typically used on relatively straight alignments; however, in recent years they have also been used for curved alignments in Nebraska and Colorado. \cref{fig:spliced-concrete-curved-box} shows a spliced-box girder bridge recently built in Denver, Colorado.
 
 
@@ -417,28 +416,13 @@ Spliced girders are typically used on relatively straight alignments; however, i
   \label{fig:spliced-concrete-curved-box}
 \end{figure}
 
-Precast spliced girders have some similarity with segmental box girders in that both structure types consist of
-smaller girder segments that are assembled and connected by posttensioning to form a final, longer girder, and both
-types are erected by staged construction. However, spliced girders and segmental box girders are quite different in
-the length of segments, type of splices, types of sections, tendon locations, and construction methods. Also, a
-composite concrete deck is typically cast on spliced girders, while the deck slab is typically cast as an integral part of
-a segmental box girder. Spliced girders use bulb-tee, I-beam, U-beam, or box shapes, while segmental box girders are
-typically box shapes.
+Precast spliced girders have some similarity with segmental box girders in that both structure types consist of smaller girder segments that are assembled and connected by posttensioning to form a final, longer girder, and both types are erected by staged construction. However, spliced girders and segmental box girders are quite different in the length of segments, type of splices, types of sections, tendon locations, and construction methods. Also, a composite concrete deck is typically cast on spliced girders, while the deck slab is typically cast as an integral part of a segmental box girder. Spliced girders use bulb-tee, I-beam, U-beam, or box shapes, while segmental box girders are typically box shapes.
 
 
 
 \paragraph{Cast-in-Place (CIP) Posttensioned Concrete Box Girders (on Falsework)}
 
-Posttensioned concrete box girders cast continuously on falsework, have become very popular in several states,
-particularly California, Arizona, and Nevada, and have been used in spans up to about 350 feet. This type of
-construction lends itself to local construction industry practices in which contractors can economically provide the
-required falsework. Similar to segmental construction, CIP on falsework offers the advantage of longer spans than
-conventional girders, and can easily accommodate curved alignments. CIP construction also allows clean lines and
-architectural finishes that improve the aesthetics. The use of posttensioning further enhances concrete durability by
-providing a superstructure that will remain essentially crack-free under service loads. Designing the structures as a
-frame and utilizing monolithic connections between the superstructure and piers also eliminates bearings, which
-further eliminates associated future maintenance. A potential disadvantage of this type of construction is difficulty in
-replacing the deck or widening the bridge. \cref{fig:cast-in-place-box-girder} shows a CIP box girder bridge under construction.
+Posttensioned concrete box girders cast continuously on falsework, have become very popular in several states, particularly California, Arizona, and Nevada, and have been used in spans up to about 350 feet. This type of construction lends itself to local construction industry practices in which contractors can economically provide the required falsework. Similar to segmental construction, CIP on falsework offers the advantage of longer spans than conventional girders, and can easily accommodate curved alignments. CIP construction also allows clean lines and architectural finishes that improve the aesthetics. The use of posttensioning further enhances concrete durability by providing a superstructure that will remain essentially crack-free under service loads. Designing the structures as a frame and utilizing monolithic connections between the superstructure and piers also eliminates bearings, which further eliminates associated future maintenance. A potential disadvantage of this type of construction is difficulty in replacing the deck or widening the bridge. \cref{fig:cast-in-place-box-girder} shows a CIP box girder bridge under construction.
 
 \begin{figure}
   \includegraphics[width=\linewidth]{cast-in-place-box-girder.jpg}
@@ -449,16 +433,9 @@ replacing the deck or widening the bridge. \cref{fig:cast-in-place-box-girder} s
 
 \paragraph{Segmental posttensioned concrete box girders (CIP and Precast)}
 
-Segmental concrete box girder systems have been used when span requirements are greater than what can be
-achieved with conventional stringer-type girders or spliced girders, in instances of sharp horizontal curvature, or
-when special aesthetics are required. They have been economical in span ranges from about 250 feet to 500 feet.
-This system is further divided into cantilever construction and span-by-span construction, and can be either precast or
-cast-in-place. They can be cast to match the shape of any alignment making them particularly suited to curvature.
-\cref{fig:cast-in-place-segmental} shows a cast-in-place segmental bridge recently built in Florida using balanced cantilever construction.
+Segmental concrete box girder systems have been used when span requirements are greater than what can be achieved with conventional stringer-type girders or spliced girders, in instances of sharp horizontal curvature, or when special aesthetics are required. They have been economical in span ranges from about 250 feet to 500 feet.  This system is further divided into cantilever construction and span-by-span construction, and can be either precast or cast-in-place. They can be cast to match the shape of any alignment making them particularly suited to curvature.  \cref{fig:cast-in-place-segmental} shows a cast-in-place segmental bridge recently built in Florida using balanced cantilever construction.
 
-Segmental box girder bridges have been observed to improve deck performance due to the pre-compression of
-the deck. Refer to \cref{chp:materials} on materials for additional information on these bridge deck systems and durability
-issues relating to details currently in use.
+Segmental box girder bridges have been observed to improve deck performance due to the pre-compression of the deck. Refer to \cref{chp:materials} on materials for additional information on these bridge deck systems and durability issues relating to details currently in use.
 
 \begin{figure}
   \includegraphics[height=5cm]{cast-in-place-segmental1.jpg}\hfill
@@ -470,18 +447,9 @@ issues relating to details currently in use.
 
 \paragraph{Concrete Arches}
 
-Concrete arches have been used for bridges with short spans of about 100 ft to long spans of over 1,000-ft span,
-but are typically considered today only in certain long span applications because of the relative economy of I-girder
-and segmental box girders in shorter spans, or when special aesthetics are required. True arches are efficient
-structural systems because vertical dead load produces axial member compressive forces that are resisted by a thrust
-at the arch abutments. Concrete has been useful for arches because of its inherent efficiency in compression.
+Concrete arches have been used for bridges with short spans of about 100 ft to long spans of over 1,000-ft span, but are typically considered today only in certain long span applications because of the relative economy of I-girder and segmental box girders in shorter spans, or when special aesthetics are required. True arches are efficient structural systems because vertical dead load produces axial member compressive forces that are resisted by a thrust at the arch abutments. Concrete has been useful for arches because of its inherent efficiency in compression.
 
-
-Concrete arches have typically been used in deck-type systems where the arch ribs are below the deck, but they
-have also been used in some through-type applications where the arch ribs extend above the deck. Deck arch
-systems are either closed spandrel types or open spandrel types. Closed spandrel types typically use barrel arches
-with longitudinal walls along the outside edges of the arches that are either filled or unfilled. Open spandrel types
-have a series of spandrel columns that transmit deck loads to the arches.
+Concrete arches have typically been used in deck-type systems where the arch ribs are below the deck, but they have also been used in some through-type applications where the arch ribs extend above the deck. Deck arch systems are either closed spandrel types or open spandrel types. Closed spandrel types typically use barrel arches with longitudinal walls along the outside edges of the arches that are either filled or unfilled. Open spandrel types have a series of spandrel columns that transmit deck loads to the arches.
 
 
 Concrete arches in the U.S. have typically been constructed using either cast-in-place on falsework methods or cable-stayed segmental methods. \cref{fig:hoover-dam} shows the cable-stayed, cast-in-place segmental construction method used for the Hoover Dam Bypass concrete arch bridge.
@@ -1653,8 +1621,7 @@ components are known to move or to be washed away in certain flood events.
 
 FHWA recommends design criteria and countermeasures in HEC-18 and in Bridge Scour and Stream Instability Countermeasures: Experience, Selection, and Design Guidance (HEC-23) (Lagasse et al. 2009), such as avoiding unfavorable flow patterns, streamlining the abutments, and designing pier foundations resistant to scour without depending upon the use of riprap or other countermeasures, as is available. To reduce the potential for scour, the bottom of spread footings should be placed below the scour design depth, and piles or drilled shafts should be designed by assuming all material above the maximum scour depth is unavailable for load resistance.
 
-Floods also place extreme lateral loads on piers and bents, which should be considered in design for bridges in locations with high risk of flooding. In these cases, the presence of soil and any corresponding load or resistance
-should only be considered below the minimum scour elevation.
+Floods also place extreme lateral loads on piers and bents, which should be considered in design for bridges in locations with high risk of flooding. In these cases, the presence of soil and any corresponding load or resistance should only be considered below the minimum scour elevation.
 
 \section{Strategy Selection}
 \label{sec:strategy-selection}
@@ -1708,7 +1675,7 @@ Overall, these requirements relate to how the bridge must function and how long 
 
 This process is further expanded in Table 2.2 , which illustrates the process design phases of the preliminary planning or Type, Size and Location (TS\&L) stage, and final design stage for a new bridge. Table 2.2 supplements the information and examples provided in Sections 2.5.2 and 2.5.3.
 
-\subsection{Existing Bridges}
+% \subsection{Existing Bridges}
 \subsection{既有桥梁}
 % Many of the service life considerations for new design are also applicable to existing bridges. An inherent difference for existing bridges however, is that the bridge system has already been selected, designed, and constructed, and may have been in service for a considerable time. This means that it will have been subjected to factors affecting service life and may have already experienced some level of deterioration. The level of deterioration will dictate the type of rehabilitation required for restoration. The process for restoring and extending the service life of an existing bridge involves a detailed system evaluation rather than a system selection. The process for existing bridges will follow a similar flow chart to that shown in \cref{subsec:system-selection-process-outline}, except that it will start at Block 3 and will entail an evaluation of the existing system components, subsystems, and elements against the various factors in the fault tree branches. Strategies for mitigating the factors are more limited and are more focused on protecting the existing elements and materials. However, they could also consider various forms of retrofit, for example, converting simple spans with deck joints to continuous spans without deck joints. The final evaluation is to determine the optimal protection strategy that will extend the existing bridge service life.
 许多对于新建桥梁使用寿命的考虑因素也适用于既有桥梁。既有桥梁与新建桥梁的一个内在差异是：桥梁\gls*{system}已经被选择、设计和建造，并且可能已经投入使用了相当长的时间。这意味着它会受到影响使用寿命的因素的影响，并且可能已经经历了某种程度的\gls*{deterioration}。 \gls*{deterioration}程度将决定恢复所需的修复类型。 恢复和延长现有桥梁使用寿命的过程涉及详细的系统评估，而不是系统选择。 现有桥梁的流程将遵循与\cref{subsec:system-selection-process-outline}所示类似的流程图，不同之处在于它将从 Block 3 开始，并且需要针对故障中的各种因素评估现有系统\gls*{component}、\gls*{subsystem}和\gls*{element}分支。 减轻这些因素的策略更为有限，并且更侧重于保护现有\gls*{element}和材料。 但是，他们也可以考虑各种形式的改造，例如，将带有桥面板接头的简支跨转换为没有桥面板接头的连续跨。最终评估是确定将延长现有桥梁使用寿命的最佳保护策略。
