--- a/contents/chp03.tex
+++ b/contents/chp03.tex
@@ -1041,7 +1041,7 @@ Strength and brittleness affect cracking and failure. In general, CRR has higher
 % Construction-related parameters affect the performance of structures. It is critical that the correct amount of reinforcement is placed in the right location within the specified tolerances. Reinforcement during concrete placement should be free from mud, oil, or other nonmetallic coatings that decrease bond \cite{aci2011b}. A normal amount of rust or mill scale that is not loose on the reinforcement is not detrimental to the bond between the concrete and the bars.
 与施工相关的参数会影响结构的性能。将正确数量的钢筋放置在指定公差范围内的正确位置至关重要。 混凝土浇筑过程中的钢筋不应有泥浆、油或其他会降低黏结力的非金属涂层 \cite{aci2011b}。 钢筋上不松散的正常量的锈或氧化皮不会对混凝土和钢筋之间的黏合产生不利影响。
 
-In the field, bending to proper bend diameters is needed to ensure that there is no breakage and no crushing of the concrete inside the bend \cite{aci2011b}.
+% In the field, bending to proper bend diameters is needed to ensure that there is no breakage and no crushing of the concrete inside the bend \cite{aci2011b}.
 在现场，需要弯曲到适当的弯曲直径，以确保弯曲内的混凝土没有破损和压碎 \cite{aci2011b}。
 
 % To minimize the corrosion potential, dissimilar metals should not be in contact. Further, reinforcement should be protected from the weather to minimize contamination and corrosion. If there is a coating over the reinforcement, special care is needed to avoid damage to the coating during handling and placement.
