--- a/contents/chp05.tex
+++ b/contents/chp05.tex
@@ -89,17 +89,9 @@
 If the concrete element is cracked, chloride penetration at crack locations may greatly exceed chloride levels in the surrounding concrete. This can lead to corrosion initiation at crack locations long before general corrosion may otherwise occur.
 
 \subsection{Corrosion Cells}
-Once the chloride concentration at the depth of the reinforcing steel exceeds threshold levels, the passive oxide
-film will begin to degrade and corrosion may be initiated. Chlorides act similarly to a catalyst in the corrosion
-process—the chlorides are involved in the corrosion reaction, but are generally not consumed by the corrosion
-reaction itself, such that a single chloride ion can be responsible for the corrosion of many atoms of iron.
+Once the chloride concentration at the depth of the reinforcing steel exceeds threshold levels, the passive oxide film will begin to degrade and corrosion may be initiated. Chlorides act similarly to a catalyst in the corrosion process—the chlorides are involved in the corrosion reaction, but are generally not consumed by the corrosion reaction itself, such that a single chloride ion can be responsible for the corrosion of many atoms of iron.
 
-On a localized basis, corrosion cells can be formed due to differences in chloride concentration at various
-locations along a single bar. These variations can result in localized pitting-type corrosion. Similarly, if entire
-sections of a reinforced concrete structure become contaminated relative to other adjacent areas, an overall corrosion
-cell or "macro-cell" can be created as illustrated in \cref{fig:corrosion-macro-cell}. Macro-cell corrosion can be very aggressive and is
-responsible for much of the severe structural damage seen on bridges and other structures. Both pitting-type
-corrosion and general corrosion result from corrosion cells.
+On a localized basis, corrosion cells can be formed due to differences in chloride concentration at various locations along a single bar. These variations can result in localized pitting-type corrosion. Similarly, if entire sections of a reinforced concrete structure become contaminated relative to other adjacent areas, an overall corrosion cell or "macro-cell" can be created as illustrated in \cref{fig:corrosion-macro-cell}. Macro-cell corrosion can be very aggressive and is responsible for much of the severe structural damage seen on bridges and other structures. Both pitting-type corrosion and general corrosion result from corrosion cells.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
@@ -108,8 +100,7 @@ corrosion and general corrosion result from corrosion cells.
   \label{fig:corrosion-macro-cell}
 \end{figure}
 
-The corrosion products (rust) occurring as a result of macro-cell corrosion occupy a large volume and cause
-cracking, concrete delamination, and spalls.
+The corrosion products (rust) occurring as a result of macro-cell corrosion occupy a large volume and cause cracking, concrete delamination, and spalls.
 
 
 \subsection{Patch Accelerated Corrosion}
@@ -149,21 +140,10 @@ The causes of corrosion are summarized in \cref{fig:causes-of-corrosion-steelbar
 
 
 \subsection{Chloride Contamination}
-Destruction of the protective oxide film on reinforcing steel is most often caused by the presence of elevated
-levels of chloride ions. The chloride threshold that initiates corrosion is generally considered to be around 1.0 to 1.4
-lbs of water soluble Cl- per cubic yard of concrete (at the level of the steel). This chloride threshold varies depending
-on the pH of the concrete. For example, concrete that has experienced a loss of alkalinity requires less chloride to
-initiate corrosion. Chloride-induced corrosion, shown in \cref{fig:chloride-induced-corrosion-steelbar}, is common in structures exposed to deicing salts,
-marine environments, or certain industrial processes. In some cases, sufficient amounts of chlorides capable of
-causing corrosion have been introduced during construction by the use of chloride-containing admixtures or
+Destruction of the protective oxide film on reinforcing steel is most often caused by the presence of elevated levels of chloride ions. The chloride threshold that initiates corrosion is generally considered to be around 1.0 to 1.4 lbs of water soluble Cl- per cubic yard of concrete (at the level of the steel). This chloride threshold varies depending on the pH of the concrete. For example, concrete that has experienced a loss of alkalinity requires less chloride to initiate corrosion. Chloride-induced corrosion, shown in \cref{fig:chloride-induced-corrosion-steelbar}, is common in structures exposed to deicing salts, marine environments, or certain industrial processes. In some cases, sufficient amounts of chlorides capable of causing corrosion have been introduced during construction by the use of chloride-containing admixtures or
 contaminated aggregates.
 
-Non-chloride-bearing salts including calcium magnesium acetate, magnesium acetate, and calcium acetate, lower
-the freezing temperature of water and can be used for ice control.
- However, magnesium-bearing solutions cause
-severe paste deterioration by forming brucite and non-cementitious magnesium silicate hydrate (Lee et al. 2000).
-The detrimental effects caused by calcium acetate were much less severe than those containing magnesium, but the
-use of these non-chloride-bearing salts has not gained wide acceptance due to cost and the distress they cause.
+Non-chloride-bearing salts including calcium magnesium acetate, magnesium acetate, and calcium acetate, lower the freezing temperature of water and can be used for ice control.  However, magnesium-bearing solutions cause severe paste deterioration by forming brucite and non-cementitious magnesium silicate hydrate (Lee et al. 2000).  The detrimental effects caused by calcium acetate were much less severe than those containing magnesium, but the use of these non-chloride-bearing salts has not gained wide acceptance due to cost and the distress they cause.
 
 \begin{figure}
   \includegraphics[width=0.6\linewidth]{chloride-induced-corrosion-steelbar.jpg}
@@ -172,38 +152,17 @@ use of these non-chloride-bearing salts has not gained wide acceptance due to co
   \label{fig:chloride-induced-corrosion-steelbar}
 \end{figure}
 \subsection{Carbonation}
-The passive condition of the reinforcing can also be disrupted by the loss of alkalinity in the concrete matrix
-surrounding the reinforcing steel. It is generally accepted that a pH greater than 10 is sufficient to provide corrosion
-protection in chloride-free concrete. The reduction in alkalinity is generally caused by carbonation, a reaction between atmospheric carbon dioxide and calcium hydroxide in the cement paste in the presence of water. The result
-is a reversion of the calcium hydroxide to calcium carbonate (approx. pH 8.5) which has insufficient alkalinity to
-maintain the passive oxide layer.
+The passive condition of the reinforcing can also be disrupted by the loss of alkalinity in the concrete matrix surrounding the reinforcing steel. It is generally accepted that a pH greater than 10 is sufficient to provide corrosion protection in chloride-free concrete. The reduction in alkalinity is generally caused by carbonation, a reaction between atmospheric carbon dioxide and calcium hydroxide in the cement paste in the presence of water. The result is a reversion of the calcium hydroxide to calcium carbonate (approx. pH 8.5) which has insufficient alkalinity to maintain the passive oxide layer.
 
-The zone of carbonation begins on the surface of atmospherically exposed concrete. The amount of time for the
-carbonation zone to reach the level of the reinforcing is a function of the thickness of concrete cover, presence and
-extent of cracks, concrete porosity, humidity levels, and the level of exposure to carbon dioxide.
- Carbonation-
-induced corrosion is more likely to be observed in structures situated in industrial environments where airborne
-pollutants are commonplace, or in old or historic structures, structures with a high degree of concrete porosity, or
-structures with low concrete cover over the reinforcement.
+The zone of carbonation begins on the surface of atmospherically exposed concrete. The amount of time for the carbonation zone to reach the level of the reinforcing is a function of the thickness of concrete cover, presence and extent of cracks, concrete porosity, humidity levels, and the level of exposure to carbon dioxide.  Carbonation- induced corrosion is more likely to be observed in structures situated in industrial environments where airborne pollutants are commonplace, or in old or historic structures, structures with a high degree of concrete porosity, or structures with low concrete cover over the reinforcement.
 
-In bridge structures, there is generally good quality concrete cover of sufficient thickness (about 2.5 in. in decks)
-to resist carbonation for up to 100 years.
+In bridge structures, there is generally good quality concrete cover of sufficient thickness (about 2.5 in. in decks) to resist carbonation for up to 100 years.
 
 \section{Strategies for Addressing Corrosion}
 \label{sec:strategy-address-corrosion}
-Because of the magnitude of the corrosion problem, both the public and private sectors have ongoing activities
-aimed at reducing or eliminating corrosion damage to concrete structures. While many technologies and materials
-have been developed for prevention and repair of corrosion-induced damage, the challenge is to select durable, cost-
-effective technologies and materials from the numerous choices available.
+Because of the magnitude of the corrosion problem, both the public and private sectors have ongoing activities aimed at reducing or eliminating corrosion damage to concrete structures. While many technologies and materials have been developed for prevention and repair of corrosion-induced damage, the challenge is to select durable, cost- effective technologies and materials from the numerous choices available.
 
-Durability and desired service life must be considered during design. In the case of new structures, it is desirable
-to avoid, prevent, or delay the initiation of corrosion through the use of low permeability concretes, proper
-precautions against cracking (see \cref{chp:materials}), and other corrosion-prevention techniques. For existing structures, the
-condition of the structure should be evaluated to determine if it is corroding or not. If the structure is corroding and
-the chloride content is high in the concrete, the contaminated concrete is removed; if rust is forming on the surface of
-the reinforcement, it is cleaned or removed and overlaid with a low permeability concrete overlay. If the existing
-structure is not corroding, some of the techniques used on new structures, such as applying sealers and membranes,
-may also be used on the existing structure.
+Durability and desired service life must be considered during design. In the case of new structures, it is desirable to avoid, prevent, or delay the initiation of corrosion through the use of low permeability concretes, proper precautions against cracking (see \cref{chp:materials}), and other corrosion-prevention techniques. For existing structures, the condition of the structure should be evaluated to determine if it is corroding or not. If the structure is corroding and the chloride content is high in the concrete, the contaminated concrete is removed; if rust is forming on the surface of the reinforcement, it is cleaned or removed and overlaid with a low permeability concrete overlay. If the existing structure is not corroding, some of the techniques used on new structures, such as applying sealers and membranes, may also be used on the existing structure.
 
 An overview of the available options is provided in \cref{fig:reduced-service-life,fig:options-avoid-corrosion,fig:options-prevent-corrosion,fig:electro-chemical-passivation}.
 
@@ -281,9 +240,7 @@ not chloride contaminated or has not already started to corrode.
 
 \subsection{Levels of Corrosion Protection for Existing Structures}
 \subsubsection{Selecting an Active Corrosion Protection Strategy for Reinforced Concrete Structures}
-The selection of the appropriate level of corrosion protection is based on many factors such as the level of
-chloride contamination and carbonation, amount of concrete damage, location of corrosion activity (localized or
-widespread), the cost and design life of the corrosion protection system, and the expected service life of the structure.
+The selection of the appropriate level of corrosion protection is based on many factors such as the level of chloride contamination and carbonation, amount of concrete damage, location of corrosion activity (localized or widespread), the cost and design life of the corrosion protection system, and the expected service life of the structure.
 
 The levels of corrosion protection described in this section are summarized in \cref{tab:levels-corrosion-protection-electrochemical}.
 
@@ -295,102 +252,39 @@ The levels of corrosion protection described in this section are summarized in \
 \end{table}
 
 \subsubsection{Cathodic Protection}
-Cathodic protection provides proven corrosion protection and is intended to effectively stop ongoing corrosion
-activity. It should be selected when the highest level of protection is necessary and the cost is economically justified.
-Cathodic protection systems are grouped into two general categories: impressed current (ICCP) and galvanic (GCP).
+Cathodic protection provides proven corrosion protection and is intended to effectively stop ongoing corrosion activity. It should be selected when the highest level of protection is necessary and the cost is economically justified.  Cathodic protection systems are grouped into two general categories: impressed current (ICCP) and galvanic (GCP).
 
-Impressed current systems may use titanium or zinc-based anodes and utilize an outside power source. For long-
-term performance, these systems should be monitored and maintained. Discrete anodes are ideal to protect heavily
-reinforced concrete, thick structural sections such as columns or beams, or steel framed masonry buildings while
-titanium ribbon or mesh anodes are placed into slots cut into the concrete surface or cast into a concrete overlay.
+Impressed current systems may use titanium or zinc-based anodes and utilize an outside power source. For long- term performance, these systems should be monitored and maintained. Discrete anodes are ideal to protect heavily reinforced concrete, thick structural sections such as columns or beams, or steel framed masonry buildings while titanium ribbon or mesh anodes are placed into slots cut into the concrete surface or cast into a concrete overlay.
 
-Galvanic systems may be designed to provide corrosion control or cathodic protection. These galvanic systems
-are self-powered and typically require less monitoring and maintenance than ICCP systems. Galvanic jackets are
-used to protect marine pilings and other structures. Galvanic anodes may be arc-sprayed zinc or otherwise applied to
-the concrete surface, or they may be cast into a concrete overlay, jacket, or encasement to provide galvanic cathodic
-protection over a desired area. If galvanic anode systems are cast into concrete or are not directly exposed to a
-marine environment, they should be activated to ensure that sufficient current is supplied to the reinforcing steel to
+Galvanic systems may be designed to provide corrosion control or cathodic protection. These galvanic systems are self-powered and typically require less monitoring and maintenance than ICCP systems. Galvanic jackets are used to protect marine pilings and other structures. Galvanic anodes may be arc-sprayed zinc or otherwise applied to the concrete surface, or they may be cast into a concrete overlay, jacket, or encasement to provide galvanic cathodic protection over a desired area. If galvanic anode systems are cast into concrete or are not directly exposed to a marine environment, they should be activated to ensure that sufficient current is supplied to the reinforcing steel to
 provide long lasting corrosion protection.
 
-Cathodic protection systems are generally designed to meet National Association of Corrosion Engineers
-(NACE) cathodic protection standards and typically use 100mV depolarization as the acceptance criteria (NACE
-2000). The current density required to achieve cathodic protection is higher than the current required for corrosion
-prevention or corrosion control applications. Typical cathodic protection systems operate in the range of 2 to 20
-mA/m2 of steel surface area. At these current densities and polarization levels, cathodic protection has demonstrated
-a very high level of corrosion protection.
+Cathodic protection systems are generally designed to meet National Association of Corrosion Engineers (NACE) cathodic protection standards and typically use 100mV depolarization as the acceptance criteria (NACE 2000). The current density required to achieve cathodic protection is higher than the current required for corrosion prevention or corrosion control applications. Typical cathodic protection systems operate in the range of 2 to 20 mA/m2 of steel surface area. At these current densities and polarization levels, cathodic protection has demonstrated a very high level of corrosion protection.
 
-Galvanic cathodic protection systems were evaluated in the research phase of the SHRP 2 R19A Project, the
-report for which is forthcoming. In this study, different galvanic anodes were evaluated for the purpose of
-minimizing corrosion in reinforced concrete members; a commonly used anode (OA), an anode with 4-times larger
-zinc surface area than ordinary anodes (OA4), and two high voltage anodes with varying degrees of output voltage
-(HVAH, higher level; and HVAL, lower level). Concrete test slabs were cast in two layers; the concrete in the upper
-layer was contaminated with salt to accelerate the corrosion activity and the lower layer was not modified. Salt was
-not added to the concrete in the lower layer. The test results indicated that there was no corrosion in any of the
-specimens in the given time period. The testing further indicated that specimens with HVAH provided increased
-corrosion protection by having higher current and generating more negative potential values than the HVAL.
-Anodes having 4-times surface area (OA4) provided additional current and corrosion protection than OA anodes. HVAL anodes exhibited current and potential values similar to the OA4 anodes. Both high voltage anodes and OA4
-anodes provided higher current and generated more negative potential values, indicating better corrosion protection
-than OA anodes. Due to time constraints, the tests were terminated without observing corrosion in the specimens.
+Galvanic cathodic protection systems were evaluated in the research phase of the SHRP 2 R19A Project, the report for which is forthcoming. In this study, different galvanic anodes were evaluated for the purpose of minimizing corrosion in reinforced concrete members; a commonly used anode (OA), an anode with 4-times larger zinc surface area than ordinary anodes (OA4), and two high voltage anodes with varying degrees of output voltage (HVAH, higher level; and HVAL, lower level). Concrete test slabs were cast in two layers; the concrete in the upper layer was contaminated with salt to accelerate the corrosion activity and the lower layer was not modified. Salt was not added to the concrete in the lower layer. The test results indicated that there was no corrosion in any of the specimens in the given time period. The testing further indicated that specimens with HVAH provided increased corrosion protection by having higher current and generating more negative potential values than the HVAL.  Anodes having 4-times surface area (OA4) provided additional current and corrosion protection than OA anodes. HVAL anodes exhibited current and potential values similar to the OA4 anodes. Both high voltage anodes and OA4 anodes provided higher current and generated more negative potential values, indicating better corrosion protection than OA anodes. Due to time constraints, the tests were terminated without observing corrosion in the specimens.
 Further research with an extended time frame is recommended.
 
 \subsubsection{Corrosion Prevention}
-Corrosion prevention is used to keep corrosion activity from initiating in contaminated concrete. In concrete
-repair projects, the removal and replacement of damaged concrete, if completed in accordance with industry
-guidelines (ICRI 2008), will address the areas with the highest levels of corrosion. However, new corrosion sites are
-likely to form in the surrounding contaminated concrete which was passive before the repairs. To mitigate new
-corrosion activity from occurring around concrete repairs or at other interfaces between new and old concrete, such
-as bridge widening, joint repairs, and slab replacements, a localized corrosion prevention strategy may be employed
-utilizing embedded galvanic anodes to extend the life of the concrete repairs. Size and spacing of embedded galvanic
-anodes should be adjusted to suit site conditions, including quantity and existing condition of reinforcing steel, level
-of chloride contamination, and environmental conditions.
+Corrosion prevention is used to keep corrosion activity from initiating in contaminated concrete. In concrete repair projects, the removal and replacement of damaged concrete, if completed in accordance with industry guidelines (ICRI 2008), will address the areas with the highest levels of corrosion. However, new corrosion sites are likely to form in the surrounding contaminated concrete which was passive before the repairs. To mitigate new corrosion activity from occurring around concrete repairs or at other interfaces between new and old concrete, such as bridge widening, joint repairs, and slab replacements, a localized corrosion prevention strategy may be employed utilizing embedded galvanic anodes to extend the life of the concrete repairs. Size and spacing of embedded galvanic anodes should be adjusted to suit site conditions, including quantity and existing condition of reinforcing steel, level of chloride contamination, and environmental conditions.
 
-There has been a significant amount of research in the area of corrosion prevention, some of which has indicated
-that applied current densities as low as 0.5 to 2.0 mA/m2 of steel surface area have been shown to be effective at
-preventing the initiation of corrosion for concrete with chloride concentrations up to at least ten times the chloride
-threshold (Pedeferri 1996). Other research has shown beneficial effects of applied currents between 0.25 and 1.0
-mA/m2 (Bertolini et al. 1996).
+There has been a significant amount of research in the area of corrosion prevention, some of which has indicated that applied current densities as low as 0.5 to 2.0 mA/m2 of steel surface area have been shown to be effective at preventing the initiation of corrosion for concrete with chloride concentrations up to at least ten times the chloride threshold (Pedeferri 1996). Other research has shown beneficial effects of applied currents between 0.25 and 1.0 mA/m2 (Bertolini et al. 1996).
 
 
 \subsubsection{Corrosion Control}
 
-Corrosion control systems are utilized in instances in which corrosion has initiated but has not yet progressed to
-the point of causing concrete damage. The use of corrosion control systems will either stop ongoing corrosion
-activity or provide a significant reduction in the corrosion rate and increased service life for the rehabilitated
-structure. In many cases, this level of protection can be provided with low incremental cost, as the protection can be
-targeted at specific areas of contamination or corrosion activity. Galvanic anodes embedded in drilled holes or
-installed on a grid pattern in a concrete repair or overlay can be used to provide targeted galvanic corrosion control to columns, beams, decks, posttensioned anchorages, and other areas where ongoing corrosion activity threatens the
-service life or serviceability of the structure. 
+Corrosion control systems are utilized in instances in which corrosion has initiated but has not yet progressed to the point of causing concrete damage. The use of corrosion control systems will either stop ongoing corrosion activity or provide a significant reduction in the corrosion rate and increased service life for the rehabilitated structure. In many cases, this level of protection can be provided with low incremental cost, as the protection can be targeted at specific areas of contamination or corrosion activity. Galvanic anodes embedded in drilled holes or installed on a grid pattern in a concrete repair or overlay can be used to provide targeted galvanic corrosion control to columns, beams, decks, posttensioned anchorages, and other areas where ongoing corrosion activity threatens the service life or serviceability of the structure. 
 
-The applied current necessary to control active corrosion is significantly higher than the current required for
-corrosion prevention. Research has indicated that the typical current density to control active corrosion is in the
-range of 1 to 7 mA/m2 (Davison et al. 2003).
+The applied current necessary to control active corrosion is significantly higher than the current required for corrosion prevention. Research has indicated that the typical current density to control active corrosion is in the range of 1 to 7 mA/m2 (Davison et al. 2003).
 
-In the study by Davison et al., corrosion control of specimens with very high initial corrosion rates was achieved.
-Some polarization of the reinforcing steel will typically occur at these current densities although the level of
-polarization may be significantly less than the NACE 100mV depolarization criteria for cathodic protection.
+In the study by Davison et al., corrosion control of specimens with very high initial corrosion rates was achieved.  Some polarization of the reinforcing steel will typically occur at these current densities although the level of polarization may be significantly less than the NACE 100mV depolarization criteria for cathodic protection.
 
-There are many situations where the corrosion activity is moderate or is localized in nature such that corrosion
-control is an appropriate approach since large scale cathodic protection may not be economically justifiable.
-Examples of this include localized areas beneath leaking expansion joints, or decks with isolated areas of high
-corrosion potentials. In these cases, targeting the protection to address the specific contaminated zone, or “hot spot,”
-rather than the entire structure may make sense from a cost/benefit point of view.
-
+There are many situations where the corrosion activity is moderate or is localized in nature such that corrosion control is an appropriate approach since large scale cathodic protection may not be economically justifiable.  Examples of this include localized areas beneath leaking expansion joints, or decks with isolated areas of high corrosion potentials. In these cases, targeting the protection to address the specific contaminated zone, or “hot spot,” rather than the entire structure may make sense from a cost/benefit point of view.
 
 
 \subsubsection{Corrosion Passivation/Electrochemical Treatments}
-Corrosion passivation is provided by electrochemical treatments that are aimed at directly addressing the cause of
-the corrosion activity. Electrochemical chloride extraction (ECE) is used to address corrosion caused by chlorides in
-chloride-contaminated structures.
- Electrochemical re-alkalization is used to address corrosion resulting from
-carbonation of the concrete. These systems are installed on the structure, operated for a short duration, then
-dismantled and removed leaving the structure in a passive condition. Electrochemical treatments provide many of the
-long-term corrosion mitigation benefits of cathodic protection systems, but without the need for long-term system
-maintenance and monitoring. Additional information about the implementation and evaluation of the two systems
-follows.
+Corrosion passivation is provided by electrochemical treatments that are aimed at directly addressing the cause of the corrosion activity. Electrochemical chloride extraction (ECE) is used to address corrosion caused by chlorides in chloride-contaminated structures.  Electrochemical re-alkalization is used to address corrosion resulting from carbonation of the concrete. These systems are installed on the structure, operated for a short duration, then dismantled and removed leaving the structure in a passive condition. Electrochemical treatments provide many of the long-term corrosion mitigation benefits of cathodic protection systems, but without the need for long-term system maintenance and monitoring. Additional information about the implementation and evaluation of the two systems follows.
 
-Electrochemical chloride extraction is an electrochemical treatment in which an electric field is applied between
-the reinforcement in the concrete and an externally mounted mesh (\cref{fig:schematic-diagram-ece-treatment}). The mesh is embedded in a
-conductive media, generally a sprayed-on mixture of lime, water, and cellulose fiber.
+Electrochemical chloride extraction is an electrochemical treatment in which an electric field is applied between the reinforcement in the concrete and an externally mounted mesh (\cref{fig:schematic-diagram-ece-treatment}). The mesh is embedded in a conductive media, generally a sprayed-on mixture of lime, water, and cellulose fiber.
 
 \begin{figure}
   % \includegraphics[width=\linewidth]{graphic-file}
@@ -399,30 +293,11 @@ conductive media, generally a sprayed-on mixture of lime, water, and cellulose f
   \label{fig:schematic-diagram-ece-treatment}
 \end{figure}
 
-During treatment, the concrete is kept saturated allowing chlorides to go into solution within the pores of the
-concrete. The negatively charged chloride ions (\ce{Cl-}) are repelled from the negatively charged rebar and attracted
-toward the positively charged external electrode mesh as a result of the applied electric field. This process lowers the
-amount of chloride in the concrete and particularly adjacent to the steel. An ECE treatment generally takes 4 to 8
-weeks to complete.
+During treatment, the concrete is kept saturated allowing chlorides to go into solution within the pores of the concrete. The negatively charged chloride ions (\ce{Cl-}) are repelled from the negatively charged rebar and attracted toward the positively charged external electrode mesh as a result of the applied electric field. This process lowers the amount of chloride in the concrete and particularly adjacent to the steel. An ECE treatment generally takes 4 to 8 weeks to complete.
 
-In instances of structures with carbonation-induced corrosion, a different electrochemical treatment process, re-
-alkalization, can be utilized to increase the pH of the concrete cover. The installation for re-alkalization is essentially
-the same as for ECE except the conductive media is saturated with an alkaline potassium carbonate solution. The
-potassium (K+) ions in the alkaline solution are transported into the concrete by the application of the electric field.
-A re-alkalization treatment generally takes four to seven days to complete and will not re-carbonate.
+In instances of structures with carbonation-induced corrosion, a different electrochemical treatment process, re- alkalization, can be utilized to increase the pH of the concrete cover. The installation for re-alkalization is essentially the same as for ECE except the conductive media is saturated with an alkaline potassium carbonate solution. The potassium (K+) ions in the alkaline solution are transported into the concrete by the application of the electric field.  A re-alkalization treatment generally takes four to seven days to complete and will not re-carbonate.
 
-Electrochemical treatment was evaluated in the research phase of the SHRP 2 R19A Project with detailed results
-to be presented in the forthcoming final report. In the SHRP 2 study, corrosion resistant reinforcement and
-electrochemically treated black bars were evaluated to determine if the chloride threshold levels increased to a level to resist corrosion. Both low and high levels of electrochemical treatment were used. The test matrix included black
-bars, electrochemically-treated black bars, stainless steel bars, and titanium bars, each subjected to salt solution. Due
-to time constraints, testing was terminated after a total of 26 cycles consisting of four days of wet cycle and 10 days
-of dry cycle; a total duration of one year. At termination, only one specimen from a set of three with black bars and
-electrochemically-treated black bars showed an increase in current or potential values indicative of uncertain
-corrosion activity. The remaining specimens indicated no corrosion activity. Thus, initial observations indicate that
-electrochemically-treated black bars may not provide the protection expected of stainless steel or titanium; however,
-whether or not they provide benefits over the black bars without treatment cannot be concluded from this study due
-to time constraints. Therefore, further research with an extended time frame is recommended.
-
+Electrochemical treatment was evaluated in the research phase of the SHRP 2 R19A Project with detailed results to be presented in the forthcoming final report. In the SHRP 2 study, corrosion resistant reinforcement and electrochemically treated black bars were evaluated to determine if the chloride threshold levels increased to a level to resist corrosion. Both low and high levels of electrochemical treatment were used. The test matrix included black bars, electrochemically-treated black bars, stainless steel bars, and titanium bars, each subjected to salt solution. Due to time constraints, testing was terminated after a total of 26 cycles consisting of four days of wet cycle and 10 days of dry cycle; a total duration of one year. At termination, only one specimen from a set of three with black bars and electrochemically-treated black bars showed an increase in current or potential values indicative of uncertain corrosion activity. The remaining specimens indicated no corrosion activity. Thus, initial observations indicate that electrochemically-treated black bars may not provide the protection expected of stainless steel or titanium; however, whether or not they provide benefits over the black bars without treatment cannot be concluded from this study due to time constraints. Therefore, further research with an extended time frame is recommended.
 
 \section{Case Studies Addressing Corrosion in Existing Structures}
 \label{sec:case-study-addressing-corrosion}
@@ -496,9 +371,7 @@ The oldest site trial of discrete galvanic anodes is over 10 years old (\cref{fi
   \label{fig:installation-anodes}
 \end{figure}
 
-The anodes were inserted around the perimeter of the repair area between 600mm and 700mm centers (\cref{fig:installation-anodes}). The anodes were installed to enable monitoring by connecting a single wire from each anode to a control box
-such that the anodes could be monitored via the box. Monitoring of the anodes consisted of measuring current output for each installed anode, and, on occasion, performing a depolarization test over a 4-hour or 24-hour period after
-disconnection of the anodes. Monitoring started in April 1999.
+The anodes were inserted around the perimeter of the repair area between 600mm and 700mm centers (\cref{fig:installation-anodes}). The anodes were installed to enable monitoring by connecting a single wire from each anode to a control box such that the anodes could be monitored via the box. Monitoring of the anodes consisted of measuring current output for each installed anode, and, on occasion, performing a depolarization test over a 4-hour or 24-hour period after disconnection of the anodes. Monitoring started in April 1999.
 
 
 \subsection{Results and Discussion}
